@@ -7,12 +7,16 @@ import com.lorarch.challenge.model.StatusMoto;
 import com.lorarch.challenge.repository.MotoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 @CacheConfig(cacheNames = "motos")
@@ -21,20 +25,111 @@ public class MotoService {
     @Autowired
     private MotoRepository motoRepository;
 
+
+    private String normPlaca(String p) {
+        return p == null ? null : p.replaceAll("\\s+", "").toUpperCase();
+    }
+
+    private StatusMoto parseStatus(String s) {
+        if (s == null) throw new IllegalArgumentException("Status obrigatório.");
+        return StatusMoto.valueOf(s.trim().toUpperCase().replace(' ', '_'));
+    }
+
+    private Pageable ensureDescId(Pageable pageable) {
+        Sort sort = pageable == null || pageable.getSort().isUnsorted()
+                ? Sort.by(Sort.Direction.DESC, "id")
+                : pageable.getSort();
+        int page = pageable == null ? 0 : Math.max(pageable.getPageNumber(), 0);
+        int size = pageable == null ? 10 : (pageable.getPageSize() > 0 ? pageable.getPageSize() : 10);
+        return PageRequest.of(page, size, sort);
+    }
+
+
     @Transactional
     @CachePut(key = "#result.id")
-    @Caching(evict = { @CacheEvict(key = "'all'") })
+    @Caching(evict = {
+            @CacheEvict(key = "'all'"),
+            @CacheEvict(cacheNames = "motosPages", allEntries = true)
+    })
     public Moto criarMoto(MotoDTO dto) {
-        motoRepository.findByPlaca(dto.getPlaca())
+        String placa = normPlaca(dto.getPlaca());
+        motoRepository.findByPlaca(placa)
                 .ifPresent(m -> { throw new IllegalArgumentException("Placa já cadastrada: " + dto.getPlaca()); });
 
-        Moto moto = new Moto();
-        moto.setPlaca(dto.getPlaca());
-        moto.setModelo(dto.getModelo());
+        Moto m = new Moto();
+        m.setPlaca(placa);
+        m.setModelo(dto.getModelo() == null ? null : dto.getModelo().trim());
+        m.setSetor(dto.getSetor() == null ? null : dto.getSetor().trim());
+        m.setStatus(parseStatus(dto.getStatus()));
+        return motoRepository.save(m);
+    }
+
+    @Transactional
+    @CachePut(key = "#id")
+    @Caching(evict = {
+            @CacheEvict(key = "'all'"),
+            @CacheEvict(cacheNames = "motosPages", allEntries = true)
+    })
+    public Moto atualizar(Long id, MotoDTO dto) {
+        Moto moto = buscarPorId(id);
+
+        String placa = normPlaca(dto.getPlaca());
+        motoRepository.findByPlaca(placa)
+                .filter(existente -> !Objects.equals(existente.getId(), id))
+                .ifPresent(x -> { throw new IllegalArgumentException("Placa já cadastrada: " + dto.getPlaca()); });
+
+        moto.setPlaca(placa);
+        moto.setModelo(dto.getModelo() == null ? null : dto.getModelo().trim());
+        moto.setSetor(dto.getSetor() == null ? null : dto.getSetor().trim());
         moto.setStatus(parseStatus(dto.getStatus()));
-        moto.setSetor(dto.getSetor());
         return motoRepository.save(moto);
     }
+
+    @Transactional
+    @CacheEvict(key = "#id")
+    @Caching(evict = {
+            @CacheEvict(key = "'all'"),
+            @CacheEvict(cacheNames = "motosPages", allEntries = true)
+    })
+    public void deletar(Long id) {
+        Moto moto = buscarPorId(id);
+        motoRepository.delete(moto);
+    }
+
+    @Transactional
+    @CachePut(key = "#id")
+    @Caching(evict = {
+            @CacheEvict(key = "'all'"),
+            @CacheEvict(cacheNames = "motosPages", allEntries = true)
+    })
+    public Moto enviarParaManutencao(Long id) {
+        Moto moto = buscarPorId(id);
+        if (moto.getStatus() == StatusMoto.EM_MANUTENCAO) return moto;
+
+        if (!(moto.getStatus() == StatusMoto.DISPONIVEL
+                || moto.getStatus() == StatusMoto.EM_USO
+                || moto.getStatus() == StatusMoto.NOVA)) {
+            throw new IllegalStateException("Só é possível enviar para manutenção motos NOVA/DISPONIVEL/EM_USO.");
+        }
+        moto.setStatus(StatusMoto.EM_MANUTENCAO);
+        return motoRepository.save(moto);
+    }
+
+    @Transactional
+    @CachePut(key = "#id")
+    @Caching(evict = {
+            @CacheEvict(key = "'all'"),
+            @CacheEvict(cacheNames = "motosPages", allEntries = true)
+    })
+    public Moto concluirManutencao(Long id) {
+        Moto moto = buscarPorId(id);
+        if (moto.getStatus() != StatusMoto.EM_MANUTENCAO) {
+            throw new IllegalStateException("A moto não está em manutenção.");
+        }
+        moto.setStatus(StatusMoto.DISPONIVEL);
+        return motoRepository.save(moto);
+    }
+
 
     @Cacheable(key = "'all'")
     public List<Moto> listarTodas() {
@@ -47,68 +142,34 @@ public class MotoService {
                 .orElseThrow(() -> new ResourceNotFoundException("Moto não encontrada com ID: " + id));
     }
 
-    @Transactional
-    @CachePut(key = "#id")
-    @Caching(evict = { @CacheEvict(key = "'all'") })
-    public Moto atualizar(Long id, MotoDTO dto) {
-        Moto moto = buscarPorId(id);
-        motoRepository.findByPlaca(dto.getPlaca())
-                .filter(existente -> !existente.getId().equals(id))
-                .ifPresent(x -> { throw new IllegalArgumentException("Placa já cadastrada: " + dto.getPlaca()); });
-
-        moto.setPlaca(dto.getPlaca());
-        moto.setModelo(dto.getModelo());
-        moto.setStatus(parseStatus(dto.getStatus()));
-        moto.setSetor(dto.getSetor());
-        return motoRepository.save(moto);
-    }
-
-    @Transactional
-    @CacheEvict(key = "#id")
-    @Caching(evict = { @CacheEvict(key = "'all'") })
-    public void deletar(Long id) {
-        Moto moto = buscarPorId(id);
-        motoRepository.delete(moto);
-    }
-
-    @Transactional
-    @CachePut(key = "#id")
-    @Caching(evict = { @CacheEvict(key = "'all'") })
-    public Moto enviarParaManutencao(Long id) {
-        Moto moto = buscarPorId(id);
-        if (moto.getStatus() == StatusMoto.EM_MANUTENCAO) return moto;
-        if (!(moto.getStatus() == StatusMoto.DISPONIVEL || moto.getStatus() == StatusMoto.EM_USO || moto.getStatus() == StatusMoto.NOVA))
-            throw new IllegalStateException("Só é possível enviar para manutenção motos NOVA/DISPONIVEL/EM_USO.");
-        moto.setStatus(StatusMoto.EM_MANUTENCAO);
-        return motoRepository.save(moto);
-    }
-
-    @Transactional
-    @CachePut(key = "#id")
-    @Caching(evict = { @CacheEvict(key = "'all'") })
-    public Moto concluirManutencao(Long id) {
-        Moto moto = buscarPorId(id);
-        if (moto.getStatus() != StatusMoto.EM_MANUTENCAO)
-            throw new IllegalStateException("A moto não está em manutenção.");
-        moto.setStatus(StatusMoto.DISPONIVEL);
-        return motoRepository.save(moto);
-    }
-
-    private StatusMoto parseStatus(String s) {
-        if (s == null) throw new IllegalArgumentException("Status obrigatório.");
-        return StatusMoto.valueOf(s.trim().toUpperCase());
-    }
-
-    @Cacheable(key = "{#termoBusca, #pageable.pageNumber}")
+    @Cacheable(cacheNames = "motosPages",
+            key = "T(java.util.Objects).hash(#termoBusca == null ? '' : #termoBusca.trim().toLowerCase(), " +
+                    "#pageable.pageNumber, #pageable.pageSize, #pageable.sort)")
     public Page<Moto> buscarTodas(String termoBusca, Pageable pageable) {
-        if (termoBusca == null || termoBusca.trim().isEmpty()) {
-            return motoRepository.findAll(pageable);
-        } else {
-            return motoRepository.findByPlacaContainingIgnoreCaseOrSetorContainingIgnoreCase(
-                    termoBusca,
-                    termoBusca,
-                    pageable
-            );
+        Pageable p = ensureDescId(pageable);
+
+        if (termoBusca == null || termoBusca.isBlank()) {
+            return motoRepository.findAll(p);
         }
+        String t = termoBusca.trim();
+        return motoRepository.findByPlacaContainingIgnoreCaseOrSetorContainingIgnoreCase(t, t, p);
+    }
+
+    public Map<String, Long> getEstatisticaGeral() {
+        List<Moto> todas = motoRepository.findAll();
+
+        long total         = todas.size();
+        long disponivel    = todas.stream().filter(m -> m.getStatus() == StatusMoto.DISPONIVEL).count();
+        long indisponivel  = todas.stream().filter(m -> m.getStatus() == StatusMoto.INDISPONIVEL).count();
+        long manutencao    = todas.stream().filter(m -> m.getStatus() == StatusMoto.EM_MANUTENCAO).count();
+        long danificada    = todas.stream().filter(m -> m.getStatus() == StatusMoto.DANIFICADA).count();
+
+        Map<String, Long> stats = new HashMap<>();
+        stats.put("TOTAL", total);
+        stats.put("DISPONIVEL", disponivel);
+        stats.put("INDISPONIVEL", indisponivel);
+        stats.put("EM_MANUTENCAO", manutencao);
+        stats.put("DANIFICADA", danificada);
+        return stats;
     }
 }
